--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.0",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.9",
